Secured site with bye-bye for now

--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -23,7 +23,7 @@
         <!-- Left Navigation Bar -->
         {% block sidebar %}
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/index">Home</a></li>
             <li><a href="/services/index">Manage Hosts</a></li>
         </ul>
         {% endblock sidebar %}
