Changed page headings

--- a/site/templates/services/captureowner.html
+++ b/site/templates/services/captureowner.html
@@ -1,9 +1,7 @@
 {% extends base_path %}
 
-{% block pagetitle %}Polokelo Host Management: Capture Owner{% endblock %}
-
 {% block pagecontent %}
-    <h1>Polokelo Host Management</h1>
+    <h1>Capture New Owner</h1>
     <form name="owner" method="post" action="/services/captureowner">
         <table>
             {{ form }}
