--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -13,7 +13,10 @@
 
 <div class="banner">
     <img src="/images/polokelo.png" alt="Polokelo Logo" />
-    <div class="page-title">{% block pagetitle %}Polokelo Booking System{% endblock %}</div>
+    <div class="page-title">
+        {% block pagetitle %}Polokelo Booking System{% endblock %}
+    </div>
+    <a href="{{ auth_url }}">{{ auth_url_text }}</a>
 </div>
 
 <div>
