--- a/site/stylesheets/main.css
+++ b/site/stylesheets/main.css
@@ -21,11 +21,17 @@ div.banner {
 }
 .banner div.page-title { 
   width: 100%;
-  height: 100%;
+  height: 60px;
   vertical-align: center;
   text-align: center;
   font: normal bold normal 180% Verdana, sans-serif;
   color: brown;
+}
+.banner div.action-links {
+  width: 100%;
+  height: 20px;
+  text-align: right;
+  font: normal bold normal 80% Verdana, sans-serif;
 }
 
 div.leftNavBar {
