--- a/trunk/site/templates/services/managehosts.html
+++ b/trunk/site/templates/services/managehosts.html
@@ -5,6 +5,7 @@
 
     <h2>Create new host</h2>
     <p><a href="/services/captureowner">Capture details of a new host.</a></p>
+    <p><a href="/services/capturecontact">Capture details of a new contact.</a></p>
 
     <h2>Current owners</h2>
     <table>
