--- a/trunk/site/templates/services/viewowner.html
+++ b/trunk/site/templates/services/viewowner.html
@@ -11,10 +11,18 @@
         </tr>
         {% endfor %}
     </table>
+    <br />
+
+    <p>
+    <a href="/services/owner/captureaddress?ownerkey={{ owner.key }}">Capture Address</a>
+    </p>
 
     <h2>Venues</h2>
-    <p><a href="/services/owner/capturevenue?ownerkey={{ owner.key }}">Capture details of a new venue.</a></p>
+    <p>
+    <a href="/services/owner/capturevenue?ownerkey={{ owner.key }}">Capture details of a new venue.</a>
+    </p>
     <br />
+
     <table>
         {% for venue in venues %}
         <tr>
