--- a/site/templates/services/viewvenue.html
+++ b/site/templates/services/viewvenue.html
@@ -13,6 +13,7 @@
     </table>
 
     <hr />
+
     <p>
     <a href="/services/owner/captureaddress?containerkey={{ venue.key }}">Capture Address</a>
     </p>
@@ -27,6 +28,24 @@
         </tr>
         {% endfor %}
     </table>
+
+    <hr />
+
+    <p>
+    <a href="/services/owner/capturephone?containerkey={{ venue.key }}">Capture Contact Number</a>
+    </p>
+
+    <table>
+        {% for number in phonenumbers %}
+        <tr>
+            <td>{{ number.numberType }}:</td>
+            <td>{{ number.number }}</td>
+            <td><a href="/services/owner/editphone?phonekey={{ number.key }}">edit</a></td>
+            <td><a href="/services/owner/deletephone?phonekey={{ number.key }}">delete</a></td>
+        </tr>
+        {% endfor %}
+    </table>
+
 
 
 {% endblock pagecontent %}
