--- a/trunk/site/templates/services/capturecomplaint.html
+++ b/trunk/site/templates/services/capturecomplaint.html
@@ -1,5 +1,9 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="{{came_from}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Capture an Complaint</h1>
     <form name="complaint" method="post" action="/services/owner/capturecomplaint">
