--- a/trunk/site/templates/services/editowner.html
+++ b/trunk/site/templates/services/editowner.html
@@ -1,5 +1,9 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="{{came_from}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Edit Existing Owner</h1>
     <form name="owner" method="post" action="/services/editowner">
