--- a/trunk/site/templates/services/viewowner.html
+++ b/trunk/site/templates/services/viewowner.html
@@ -1,6 +1,12 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+    <a href="/services/hostinfo">manage hosts</a>
+{% endblock %}
+
 {% block pagecontent %}
+    <br />
+
     <h1>Owner</h1>
 
     <table>
