--- a/trunk/site/templates/services/viewvenue.html
+++ b/trunk/site/templates/services/viewvenue.html
@@ -1,5 +1,9 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="/services/viewowner?ownerkey={{ownerkey}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Venue</h1>
 
