--- a/site/templates/services/captureemail.html
+++ b/site/templates/services/captureemail.html
@@ -1,5 +1,9 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="{{came_from}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Capture an Email Address</h1>
     <form name="emailaddress" method="post" action="/services/owner/captureemail">
