--- a/site/templates/services/editphonenumber.html
+++ b/site/templates/services/editphonenumber.html
@@ -1,5 +1,9 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="{{came_from}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Edit Existing Contact Number</h1>
     <form name="number" method="post" action="/services/owner/editphone">
