--- a/site/templates/services/viewbedroom.html
+++ b/site/templates/services/viewbedroom.html
@@ -17,7 +17,12 @@
     <a href="/services/owner/capturebed?containerkey={{ bedroom.key }}">Capture Bed</a>
     </p>
 
-    <table>
+    <table class="listing">
+        <thead>
+          <td>Name</td>
+          <td>Action</td>
+          <td>Action</td>
+        </thead>
         {% for bed in beds %}
         <tr>
             <td>{{ bed.listing_name }}:</td>
