--- a/trunk/site/templates/services/managehosts.html
+++ b/trunk/site/templates/services/managehosts.html
@@ -4,7 +4,9 @@
     <h1>Host Management</h1>
 
     <h2>Owners</h2>
-    <p><a href="/services/captureowner">Capture details of a new host.</a></p>
+    <p><strong>Owners</strong>
+      (<a href="/services/owner/captureowner"> New </a>)
+    </p>
     <table class="listing">
         <thead>
           <td>Reference</td>
